--- a/compose.yml
+++ b/compose.yml
@@ -37,7 +37,7 @@ services:
       - POSTGRES_DB=fantastic_db
 
   rust-users:
-    image: test-users
+    image: emilianomaccaferri/pieno-users:v1.0.0-creation-date
     depends_on:
       - postgres_db
     networks:
